# l1x-core

./: .dockerignore  .gitignore  Cargo.toml  Contributing.md  Dockerfile  Dockerfile-build  Makefile  README.md  appspec.yml  config.toml.example  docker-compose-entrypoint.sh  docker-compose.yml  export_public_patch.sh  l1x_core_db.conf  pre-commit-msgs.sh  reference.commit  run_l1x_core_node.sh  run_migrations.sh  rust-toolchain.toml  rustfmt.toml  updates.txt  xscore_test_config.toml
account/: Cargo.toml
account/src/: account_manager.rs  account_state.rs  lib.rs  state_cas.rs  state_pg.rs  state_rock.rs  tests.rs
artifacts/: MYERC20.json  (+3 more)
block/: Cargo.toml
block/src/: block_manager.rs  block_state.rs  lib.rs  state_cas.rs  state_cas_old.rs  state_pg.rs  state_rock.rs  tests.rs
block_proposer/: Cargo.toml
block_proposer/src/: block_proposer_manager.rs  block_proposer_state.rs  lib.rs  state_cas.rs  state_cas_old.rs  state_pg.rs  state_rocks.rs  tests.rs
cli/: Cargo.toml  EVENTS.md  EVM.md  README.md  initcli.sh  package-lock.json  package.json  test.sh
cli/evm-contract/: .gitignore  README.md  hardhat.config.ts  package.json
cli/evm-contract/scripts/: deploy.ts
cli/sol/: event-example.abi.json  event-example.compiled  event-example.sol
cli/sol/ts/: event-example-abi.json  package.json  subscribe_events.ts
cli/sol/txn-payload/: evm_smart_contract_deployment.json  evm_smart_contract_function_call.json
cli/src/: examples.rs  json.rs  lib.rs  main.rs  types.rs
cli/txn-payload/: create_staking_pool.json  evm_event_sample_deployment.json  evm_event_sample_function_call.json  evm_sc_bytecode_deployment.json  evm_smart_contract_deployment.json  evm_smart_contract_function_call.json  native_token_transfer.json  smart_contract_deployment.json  smart_contract_function_call.json  smart_contract_init.json  smart_contract_read_only_call.json  stake.json  un_stake.json  xtalk_smart_contract_deployment.json  xtalk_smart_contract_function_call.json  xtalk_smart_contract_init.json
cli/txn-payload/balancer-pool/: README.md  goerli-swap.json  pool_balancer_deployment.json  pool_balancer_init.json  source_registry_deployment.json  source_registry_init.json
cli/txn-payload/ft_smartcontract/: deployment.json  ft_balance_of.json  ft_name.json  function_call.json  init.json  read_only_call.json
cli/txn-payload/nft_smartcontract/: deployment.json  ft_name.json  function_call.json  init.json  read_only_call.json
cli/txn-payload/pool_stable/: README.md  pool_stable_create.json
cluster/: Cargo.toml
cluster/src/: cluster_manager.rs  cluster_state.rs  lib.rs  state_cas.rs  state_cas_old.rs  state_pg.rs  state_rock.rs  tests.rs
common/: Cargo.toml
common/src/: lib.rs
compile_time_config/: Cargo.toml
compile_time_config/src/: lib.rs
consensus/: Cargo.toml
consensus/src/: consensus.rs  lib.rs  pending_blocks.rs
contract/: Cargo.toml
contract/src/: contract_manager.rs  contract_state.rs  lib.rs  state_cas.rs  state_cas_old.rs  state_pg.rs  state_rock.rs  tests.rs
contract_instance/: Cargo.toml
contract_instance/src/: contract_instance_state.rs  lib.rs  state_cas.rs  state_cas_old.rs  state_pg.rs  state_rock.rs  tests.rs
contract_instance_manager/: Cargo.toml
contract_instance_manager/src/: contract_instance_evm.rs  contract_instance_l1xvm.rs  contract_instance_manager.rs  lib.rs
db/: Cargo.toml  README.md  diesel.toml
db/src/: cassandra.rs  db.rs  lib.rs  rocksdb.rs  schema.rs  tests.rs  utils.rs
db/src/postgres/: config.rs  mod.rs  pg_models.rs  postgres.rs  postgres_test.rs  schema.rs
db/src/postgres/migrations/2023-10-12-045340_account/: down.sql  up.sql
db_traits/: Cargo.toml
db_traits/src/: account.rs  base.rs  block.rs  block_proposer.rs  cluster.rs  contract.rs  contract_instance.rs  event.rs  lib.rs  node_health.rs  node_info.rs  staking.rs  sub_cluster.rs  validator.rs  vote.rs  vote_result.rs
event/: Cargo.toml
event/src/: event_manager.rs  event_state.rs  lib.rs  state_cas.rs  state_cas_old.rs  state_pg.rs  state_rock.rs  tests.rs
evm_precompile/: Cargo.toml
evm_precompile/src/: bn128.rs  lib.rs  modexp.rs  simple.rs
evm_precompile/src/backend/: mod.rs
evm_precompile/src/blake2/: mod.rs
evm_precompile/src/standard/: helper.rs  mod.rs
evm_precompile/src/standard/gasometer/: costs.rs  mod.rs
evm_precompile/src/standard/invoker/: invoker.rs  mod.rs  resolver.rs  routines.rs  state.rs
execute/: Cargo.toml
execute/src/: consts.rs  execute_block.rs  execute_common.rs  execute_contract_evm.rs  execute_contract_l1xvm.rs  execute_contract_xtalk.rs  execute_fee.rs  execute_read_only_call.rs  execute_staking.rs  execute_token.rs  execute_transaction.rs  lib.rs  tests.rs  tests_evm.rs  tests_revert.rs
fee/: Cargo.toml
fee/src/: fee_manager.rs  gas_station.rs  lib.rs
genesis/: Cargo.toml
genesis/src/: genesis.rs
integration_tests/: Cargo.toml  README.md  build.rs  config.toml
integration_tests/fixtures/l1x-test-contract/: Cargo.toml
integration_tests/fixtures/l1x-test-contract/src/: lib.rs
integration_tests/src/: account.rs  contract.rs  lib.rs  server.rs  transaction.rs
l1x-vrf/: Cargo.toml  README.md
l1x-vrf/src/: common.rs  lib.rs  secp_vrf.rs  tests.rs
l1x_evm/: Cargo.toml
l1x_evm/src/: evm_call.rs  lib.rs  tagged_runtime.rs
l1x_htm/: Cargo.toml
l1x_htm/src/: anomaly_likelihood.rs  encoder.rs  lib.rs  realtime_checks.rs  spatial_pooler.rs  temporal_memory.rs  utils.rs
l1x_node_health/: Cargo.toml
l1x_node_health/src/: lib.rs  node_health_manager.rs  node_health_state.rs  state_cas.rs  state_pg.rs  state_rocks.rs  tests.rs
mempool/: Cargo.toml  README.md
mempool/src/: lib.rs  mempool.rs  tests.rs
mint/: Cargo.toml
mint/src/: mint.rs
node/: Cargo.toml
node/src/: lib.rs  node.rs  sync.rs  tests.rs
node_info/: Cargo.toml
node_info/src/: lib.rs  node_info_manager.rs  node_info_state.rs  state_cas.rs  state_cas_old.rs  state_pg.rs  state_rock.rs  tests.rs
p2p/: Cargo.toml
p2p/src/: config.rs  lib.rs  network.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
(+276 files in other folders)
