[workspace]
resolver = "2"

members = [
    "account",
    "block",
    "block_proposer",
    "cli",
    "cluster",
    "consensus",
    "contract",
    "contract_instance",
    "contract_instance_manager",
    "compile_time_config",
    "db",
    "execute",
    "event",
    "fee",
    "l1x_evm",
    "l1x-vrf",
    "mempool",
    "node",
    "p2p",
    "primitives",
    "runtime_config",
    "server",
    "staking",
    "staking_manager",
    "sub_cluster",
    "system",
    "traits",
    "validator",
    "node_info",
    "vote",
    "vote_result",
    "validate",
    "relayer",
    "vm/l1x-ebpf-runtime",
    "vm/l1x-rbpf",
    "vm/l1x-vm-cli",
    "vm/vm-execution-fee",
    "vm/vm-outcome",
    "util",
    "genesis",
    "db_traits",
    "evm_interpreter",
    "evm_precompile",
    "types",
    "mint",
    "state",
    "xscore", 
    "l1x_htm", 
    "l1x_node_health",
    "system_contracts",
]

[workspace.package]
version = "2.4.3"
license = "Polyform-Perimeter-1.0.0"

[workspace.dependencies]
l1x-rpc = { git = 'https://github.com/L1X-Foundation-Consensus/l1x-rpc.git', rev = "v0.5.0" }

anyhow = "1.0"
hex = "0.4"
hex-literal = "0.4"
tokio = { version = "1.34.0", features = ["full"] }
async-trait = "0.1.72"
bincode = "1.3.3"
base64 = "0.22"
l1x-sdk = "0.3"
borsh = { version = "0.9", features = ["const-generics"] }

[workspace.lints.rust]
unused_imports = "deny"
unused_braces = "deny"
