[package]
name = "account"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }

scylla = "0.11.1"
tokio = { workspace = true }
num-traits = "0.2.15"
lazy_static = "1.4.0"
serial_test = "3.0.0"
rocksdb = "0.21.0"
async-trait = { workspace = true }
bigdecimal = "0.4.2"
num-bigint = "0.4.4"
diesel = { version = "2.1.3", features = [
    "postgres",
    "chrono",
    "numeric",
    "r2d2",
] }
serde_json = "1.0.107"

# System dependencies
system = { package = 'system', path = '../system', default-features = false }
primitives = { package = 'primitives', path = '../primitives', default-features = false }
db = { package = 'db', path = '../db', default-features = false }
db_traits = { package = 'db_traits', path = '../db_traits', default-features = false }
util = { package = 'util', path = '../util', default-features = false }

[lints]
workspace = true
