[package]
name = "block"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.6"
hex = { workspace = true }
anyhow = { workspace = true }
tempfile = "3.5.0"
log = "0.4.18"
scylla = "0.11.1"
tokio = { workspace = true }
num-traits = "0.2.15"
bincode="1.3.3"
serde_bytes = "0.11.9"
serde_json = "1.0.96"
serial_test = "3.0.0"
chrono = "0.4.27"
rocksdb = "0.21.0"
serde = { version = "1.0.163", features = ["derive"] }
async-trait = { workspace = true }
diesel = { version = "2.1.3", features = [
    "postgres",
    "chrono",
    "numeric",
    "r2d2",
] }
bigdecimal = "0.4.2"

# System dependencies
l1x-rpc = { workspace = true }
l1x-vrf = { package = 'l1x-vrf', path = '../l1x-vrf', default-features = false }
util = { package = 'util', path = '../util', default-features = false }
db_traits = { package = 'db_traits', path = '../db_traits', default-features = false }
primitives = { package = 'primitives', path = '../primitives', default-features = false }
system = { package = 'system', path = '../system', default-features = false }
cluster = { package = 'cluster', path = '../cluster', default-features = false }
db = { package = 'db', path = '../db', default-features = false }
node_info = { package = 'node_info', path = '../node_info', default-features = false }
account = { package = 'account', path = '../account', default-features = false }
compile_time_config = { package = 'compile_time_config', path = '../compile_time_config' }

[lints]
workspace = true
