[package]
name = "block_proposer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { workspace = true }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_bytes = "0.11.9"
bincode = { workspace = true }
anyhow = { workspace = true }
tempfile = "3.5.0"
log = "0.4.18"
scylla = "0.11.1"
tokio = { workspace = true }
num-traits = "0.2.15"
rocksdb = "0.21.0"
bigdecimal = "0.4.2"
diesel = { version = "2.1.3", features = [
    "postgres",
    "chrono",
    "numeric",
    "r2d2",
] }
async-trait = { workspace = true }
serial_test = "3.0.0"

# System dependencies
system = { package = 'system', path = '../system', default-features = false }
primitives = { package = 'primitives', path = '../primitives', default-features = false }
db = { package = 'db', path = '../db', default-features = false }
cluster = { package = 'cluster', path = '../cluster', default-features = false }
node_info = { package = 'node_info', path = '../node_info', default-features = false }
l1x-vrf = { package = 'l1x-vrf', path = '../l1x-vrf', default-features = false }
db_traits = { package = 'db_traits', path = '../db_traits', default-features = false }
util = { package = 'util', path = '../util', default-features = false }
validator = { package = 'validator', path = '../validator', default-features = false }
block = { package = 'block', path = '../block', default-features = false }
compile_time_config = { package = 'compile_time_config', path = '../compile_time_config' }
libp2p = "0.51.3"
futures = "0.3.29"

[lints]
workspace = true
