[package]
name = "cli"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
l1x-rpc = { workspace = true }
system = { package = 'system', path = '../system', default-features = false }
primitives = { package = 'primitives', path = '../primitives', default-features = false }
clap = { version = "4.3.11", features = ["derive"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_bytes = "0.11.9"
reqwest = { version = "0.11", features = ["json"] }
tokio = { workspace = true }
secp256k1 = { version = "0.28.2", features = [] }
hex = { workspace = true }
libp2p = { version = "0.51.3", features = ["secp256k1"] }
anyhow = { workspace = true }
tonic = "0.9.2"
prost = "0.12.2"
prost-types = "0.12.2"
pretty_env_logger = "0.5.0"
log = "0.4.18"
lazy_static = "1.4.0"
tokio-stream = "0.1.14"

[[bin]]
name = "cli"
path = "src/main.rs"

[lints]
workspace = true
