[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
primitives = { package = 'primitives', path = '../primitives', default-features = false }
proc-macro2 = "1.0"

quote = "1.0"
syn = "1.0.109"
[lib]
proc-macro = true


[lints]
workspace = true
