[package]
name = "contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
scylla = "0.11.1"
tokio = { workspace = true }
num-traits = "0.2.15"
rocksdb = "0.21.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

system = { package = 'system', path = '../system', default-features = false }
primitives = { package = 'primitives', path = '../primitives', default-features = false }
db = { package = 'db', path = '../db', default-features = false }

cluster = { package = 'cluster', path = '../cluster', default-features = false }
node_info = { package = 'node_info', path = '../node_info', default-features = false }
serial_test = "3.0.0"
db_traits = { package = 'db_traits', path = '../db_traits', default-features = false }
async-trait = { workspace = true }
diesel = { version = "2.1.3", features = [
    "postgres",
    "chrono",
    "numeric",
    "r2d2",
] }

[lints]
workspace = true
