[package]
name = "contract_instance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
scylla = "0.11.1"
tokio = { workspace = true }
num-bigint = "0.4.3"
num-traits = "0.2.15"

sha3 = "0.10.8"
generic-array = "1.0.0"
log = "0.4.18"
rocksdb = "0.21.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

system = { package = 'system', path = '../system', default-features = false }
primitives = { package = 'primitives', path = '../primitives', default-features = false }
db = { package = 'db', path = '../db', default-features = false }
db_traits = { package = 'db_traits', path = '../db_traits', default-features = false }
async-trait = { workspace = true }
diesel = { version = "2.1.3", features = [
    "postgres",
    "chrono",
    "numeric",
    "r2d2",
] }
bigdecimal = "0.4.2"
serial_test = "3.0.0"

[lints]
workspace = true
