[package]
name = "contract_instance_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
scylla = "0.11.1"
tokio = { workspace = true }
num-bigint = "0.4.3"
num-traits = "0.2.15"

sha3 = "0.10.8"
generic-array = "1.0.0"
log = "0.4.18"
rocksdb = "0.21.0"
evm = "0.41.0"

system = { package = 'system', path = '../system', default-features = false }
state = { package = 'state', path = '../state', default-features = false }
primitives = { package = 'primitives', path = '../primitives', default-features = false }
db = { package = 'db', path = '../db', default-features = false }
traits = { package = 'traits', path = '../traits', default-features = false }
account = { package = 'account', path = '../account', default-features = false }
contract = { package = 'contract', path = '../contract', default-features = false }
contract_instance = { package = 'contract_instance', path = '../contract_instance', default-features = false }
l1x-vrf = { package = 'l1x-vrf', path = '../l1x-vrf', default-features = false }
event = { package = 'event', path = '../event', default-features = false }
l1x_evm = { package = 'l1x_evm', path = '../l1x_evm', default-features = false }
util = { package = 'util', path = '../util', default-features = false }
staking = { package = 'staking', path = '../staking', default-features = false }
cluster = { package = 'cluster', path = '../cluster', default-features = false }
node_info = { package = 'node_info', path = '../node_info', default-features = false }
evm-runtime = "0.41.0"
evm-precompile = { package = 'evm-precompile', path = '../evm_precompile', default-features = false }
evm-interpreter = { package = 'evm-interpreter', path = '../evm_interpreter', features = ["std"] }
primitive-types = { version = "0.12", default-features = false }
vm-outcome = { package = 'vm-outcome', path = '../vm/vm-outcome', default-features = false }
db_traits = { package = 'db_traits', path = '../db_traits', default-features = false }
async-trait = { workspace = true }
diesel = { version = "2.1.3", features = [
    "postgres",
    "chrono",
    "numeric",
    "r2d2",
] }
bigdecimal = "0.4.2"
serial_test = "3.0.0"

[lints]
workspace = true
