[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scylla = "0.11.1"
tokio = { workspace = true }
byteorder = "1.4.3"
num-bigint = "0.4.3"
num-traits = "0.2.14"
anyhow = { workspace = true }
once_cell = "1.18.0"
lazy_static = "1.4.0"
log = "0.4.18"
directories = "5.0.1"
# l1X modules
primitives = { package = 'primitives', path = '../primitives', default-features = false }
system = { package = 'system', path = '../system', default-features = false }
serial_test = "3.0.0"
dotenvy = "0.15"
chrono = { version = "0.4.19", features = ["serde"] }
diesel_migrations = "2.1.0"
diesel = { version = "2.1.3", features = [
    "postgres",
    "chrono",
    "numeric",
    "r2d2",
] }
structopt = "0.3.26"
serde = "1.0.189"
bigdecimal = { version = "0.4.1", features = ["serde"] }
rand = "0.8.5"

[lints]
workspace = true
