[package]
name = "db_traits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
primitives = { package = 'primitives', path = '../primitives', default-features = false }
system = { package = 'system', path = '../system', default-features = false }
l1x-rpc = { workspace = true }
ethers = { version = "2.0.8", features = ["ws", "rustls"] }
types = { package = 'types', path = '../types', default-features = false }

[lints]
workspace = true
