[package]
name = "event"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
scylla = "0.11.1"
tokio = { workspace = true }
ethers = { version = "2.0.8", features = ["ws", "rustls"] }
chrono = "0.4.27"
log = "0.4.18"
rocksdb = "0.21.0"
ethereum-types = "0.14.1"

system = { package = 'system', path = '../system', default-features = false }
primitives = { package = 'primitives', path = '../primitives', default-features = false }
block = { package = 'block', path = '../block', default-features = false }
db = { package = 'db', path = '../db', default-features = false }
types = { package = 'types', path = '../types', default-features = false }
serial_test = "3.0.0"
serde_json = { version = "1.0.107", features = [] }
num-bigint = "0.4.4"
db_traits = { package = 'db_traits', path = '../db_traits', default-features = false }
async-trait = { workspace = true }
diesel = { version = "2.1.3", features = [
    "postgres",
    "chrono",
    "numeric",
    "r2d2",
] }
bigdecimal = "0.4.2"
util = { package = 'util', path = '../util', default-features = false }

[lints]
workspace = true
