[package]
name = "genesis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitives = { package = 'primitives', path = '../primitives', default-features = false }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
secp256k1 = { version = "0.28.2"}
anyhow = { workspace = true }
async-trait = { workspace = true }
rand = "0.8.5"
tiny-bip39 = "1.0.0"
directories = "5.0.1"
hex = { workspace = true }

# System Dependencies
db = { package = 'db', path = '../db', default-features = false }
l1x-vrf = { package = 'l1x-vrf', path = '../l1x-vrf', default-features = false }
system = { package = 'system', path = '../system', default-features = false }
block_proposer = { package = 'block_proposer', path = '../block_proposer', default-features = false }
block = { package = 'block', path = '../block', default-features = false }

[lints]
workspace = true
