[package]
name = "l1x-vrf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = { version = "0.28.2", features = [ "global-context", "rand-std"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_bytes = "0.11.9"
hex = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
tempfile = "3.5.0"

#rand = "0.7.0"
scylla = "0.11.1"
tokio = { workspace = true }
num-traits = "0.2.15"
async-trait = { workspace = true }
log = "0.4.18"
dotenv = "0.15.0"
serde_json = "1"

sha3 = "0.10.8"
ethers = "2.0.8"
hex-literal = { workspace = true }
k256 = "0.13.1"


[lints]
workspace = true
