[package]
name = "l1x_evm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evm = "0.41.0"
evm-runtime = "0.41.0"
evm-gasometer = "0.41.0"
primitive-types = { version = "0.12", default-features = false, features = ["rlp"] }

anyhow = { workspace = true }
tokio = { workspace = true }

bn = { package = "substrate-bn", version = "0.6", default-features = false }
k256 = { version = "0.13", features = ["ecdsa"], default-features = false }
num = { version = "0.4", default-features = false, features = ["alloc"] }
ripemd = { version = "0.1", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
sha3 = { version = "0.10.8", default-features = false }

primitives = { package = 'primitives', path = '../primitives', default-features = false }
state = { package = 'state', path = '../state', default-features = false }
system ={ package = "system", path = "../system" }
rlp = { version = "0.5", default-features = false }
vm-outcome = { package = 'vm-outcome', path = '../vm/vm-outcome', default-features = false }
account = { package = 'account', path = '../account', default-features = false }
event = { package = 'event', path = '../event', default-features = false }
contract = { package = 'contract', path = '../contract', default-features = false }
contract-instance = { package = 'contract_instance', path = '../contract_instance', default-features = false }
db = { package = 'db', path = '../db', default-features = false }
evm-interpreter = { package = 'evm-interpreter', path = '../evm_interpreter', features = ["std"] }

[features]
default = ["std"]
std = [
    "evm/std",
    "k256/std",
    "num/std",
    "primitive-types/std",
    "ripemd/std",
    "sha2/std",
    "sha3/std",
]

[lints]
workspace = true
