[package]
name = "mempool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
async-std = "1.12.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sha2 = "0.10.6"
bincode = { workspace = true }
anyhow = { workspace = true }
tempfile = "3.5.0"
log = "0.4.18"
futures = "0.3.29"
libp2p = { version = "0.51.3", features = ["macros", "tcp", "dns", "tokio", "websocket", "noise", "mplex", "yamux", "kad", "identify", "gossipsub", "mdns", "quic"]}
async-trait = { workspace = true }
hex = { workspace = true }
secp256k1 = { version = "0.28.2", features = [ "global-context", "rand-std"] }

system = { package = 'system', path = '../system', default-features = false }
validate = { package = 'validate', path = '../validate', default-features = false }
primitives = { package = 'primitives', path = '../primitives', default-features = false }
account = { package = 'account', path = '../account', default-features = false }
contract = { package = 'contract', path = '../contract', default-features = false }
contract-instance = { package = 'contract_instance', path = '../contract_instance', default-features = false }
block = { package = 'block', path = '../block', default-features = false }
cluster = { package = 'cluster', path = '../cluster', default-features = false }
db = { package = 'db', path = '../db', default-features = false }
block_proposer = { package = 'block_proposer', path = '../block_proposer', default-features = false }
node_info = { package = 'node_info', path = '../node_info', default-features = false }
execute = { package = 'execute', path = '../execute', default-features = false }
l1x-vrf = { package = 'l1x-vrf', path = '../l1x-vrf', default-features = false }
vote = { package = 'vote', path = '../vote', default-features = false }
vote_result = { package = 'vote_result', path = '../vote_result', default-features = false }
serial_test = "3.0.0"
evm-interpreter = { package = 'evm-interpreter', path = '../evm_interpreter', features = ["std"] }
util = { package = 'util', path = '../util', default-features = false }
l1x_htm = { package = 'l1x_htm', path = '../l1x_htm' }
compile_time_config = { package = 'compile_time_config', path = '../compile_time_config' }
runtime_config = { package = 'runtime_config', path = '../runtime_config' }


[lints]
workspace = true
