[package]
name = "node"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitives = { package = 'primitives', path = '../primitives', default-features = false }
mempool = { package = 'mempool', path = '../mempool', default-features = false }
cluster = { package = 'cluster', path = '../cluster', default-features = false }
p2p = { package = 'p2p', path = '../p2p', default-features = false }
account = { package = 'account', path = '../account', default-features = false }
block = { package = 'block', path = '../block', default-features = false }
system = { package = 'system', path = '../system', default-features = false }
consensus = { package = 'consensus', path = '../consensus', default-features = false }
contract = { package = 'contract', path = '../contract', default-features = false }
contract-instance = { package = 'contract_instance', path = '../contract_instance', default-features = false }
block_proposer = { package = 'block_proposer', path = '../block_proposer', default-features = false }
l1x-vrf = { package = 'l1x-vrf', path = '../l1x-vrf', default-features = false }
validator = { package = 'validator', path = '../validator', default-features = false }
vote_result = { package = 'vote_result', path = '../vote_result', default-features = false }
validate = { package = 'validate', path = '../validate', default-features = false }
genesis = { package = 'genesis', path = '../genesis', default-features = false }
node_info = { package = 'node_info', path = '../node_info', default-features = false }
state = { package = 'state', path = '../state' }
l1x-rpc = { workspace = true }
db = { package = 'db', path = '../db', default-features = false }
util = { package = 'util', path = '../util', default-features = false }
execute = { package = 'execute', path = '../execute', default-features = false }
types = { package = 'types', path = '../types', default-features = false }
compile_time_config = { package = 'compile_time_config', path = '../compile_time_config' }
l1x_htm = { package = 'l1x_htm', path = '../l1x_htm' }
diesel = { version = "2.1.3", features = [
    "postgres",
    "chrono",
    "numeric",
    "r2d2",
] }
staking = { package = 'staking', path = '../staking', default-features = false }
tokio = { workspace = true }
async-scoped = { version = "0.8.0", features = ["use-tokio"] }
log = "0.4.18"
bincode = { workspace = true }
hex = { workspace = true }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
rand = "0.8.5"
anyhow = { workspace = true }
lazy_static = "1.4.0"
libp2p = { version = "0.51.3", features = ["secp256k1"] }
secp256k1 = { version = "0.28.2", features = ["recovery"] }
serial_test = "3.0.0"
ethers = { version = "2.0.8", features = ["ws", "rustls"] }
tonic = "0.9.2"
regex = "1.10.2"
futures = "0.3.29"
structopt = "0.3.26"
aws-sdk-s3 = "0.30.0"
sha2 = "0.10.7"
reqwest = "0.11.20"
l1x_node_health = { package = 'l1x_node_health', path = '../l1x_node_health', default-features = false }
runtime_config = { package = 'runtime_config', path = '../runtime_config' }

[lints]
workspace = true
