[package]
name = "node_info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { workspace = true }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_bytes = "0.11.9"
sha2 = "0.10.6"
bincode = { workspace = true }
anyhow = { workspace = true }
tempfile = "3.5.0"
scylla = "0.11.1"
tokio = { workspace = true }
num-traits = "0.2.15"
rocksdb = "0.21.0"
secp256k1 = { version = "0.28.2", features = [] }
system = { package = 'system', path = '../system', default-features = false }
primitives = { package = 'primitives', path = '../primitives', default-features = false }
util = { package = 'util', path = '../util', default-features = false }
db = { package = 'db', path = '../db', default-features = false }
xscore = { package = 'xscore', path = '../xscore', default-features = false }
staking = { package = 'staking', path = '../staking', default-features = false }
cluster = { package = 'cluster', path = '../cluster', default-features = false }
l1x-vrf = { package = 'l1x-vrf', path = '../l1x-vrf', default-features = false }
serial_test = "3.0.0"
db_traits = { package = 'db_traits', path = '../db_traits', default-features = false }
async-trait = { workspace = true }
diesel = { version = "2.1.3", features = [
	"postgres",
	"chrono",
	"numeric",
	"r2d2",
] }
bigdecimal = "0.4.2"
log = "0.4.18"

[lints]
workspace = true
