[package]
name = "primitives"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { workspace = true }
anyhow = { workspace = true }
tempfile = "3.5.0"
local-ip-address = "0.5.3"

[lints]
workspace = true
